#add_subdirectory(helloworld)
#add_subdirectory(firstapp)
#add_subdirectory(tictactoe)
#add_subdirectory(campominado)
#add_subdirectory(sierpinski)
#add_subdirectory(coloredtriangles)
#add_subdirectory(regularpolygons)
#add_subdirectory(asteroids)
#add_subdirectory(breakout)
#add_subdirectory(loadmodel)
add_subdirectory(lookat)